--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,4 +43,17 @@
         app:layout_constraintTop_toBottomOf="@+id/MainActivityStartAdButton"
         app:layout_constraintVertical_bias="0.5" />
 
+    <TextView
+        android:id="@+id/MainActivityRewardAmountTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="@string/reward"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/MainActivityRewardAdButton" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
